--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,13 +105,13 @@
     "# function to evaluate the model\n",
     "def compute_chrf(predictions, references):\n",
     "    chrf = evaluate.load(\"chrf\")\n",
-    "    chrf_score = chrf.compute(predictions=predictions, references=references)\n",
+    "    chrf_score = chrf.compute(predictions=predictions, references=references, word_order=2)\n",
     "    return chrf_score "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97e880848ee5401f89af5294d64865c3",
+       "model_id": "28927ee0103a48cab0f7181b0c5dd444",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f7ea6c18dd940c7a25467ca8ddaa4ae",
+       "model_id": "db9e85697ba34ce2aa47e58a7c0e1bfb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,6 +148,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test dataset size: 1200\n",
+      "IN22 benchmark dataset size: 1024\n"
+     ]
     }
    ],
    "source": [
@@ -158,14 +166,17 @@
     "print(\"Parameter size:\", finetuned_model.num_parameters())\n",
     "\n",
     "# read test and benchmark data\n",
-    "test_dataset = prepare_data(\"./dataset/training_split/bpcc/test.eng_Latn\", \"./dataset/training_split/bpcc/test.eng_Latn\", \"test\")\n",
+    "test_dataset = prepare_data(\"./dataset/training_split/bpcc/test.eng_Latn\", \"./dataset/training_split/bpcc/test.mai_Deva\", \"test\")\n",
     "\n",
     "# choose random 1200 examples from test dataset for faster inference and evaluation\n",
     "test_dataset = test_dataset.shuffle(seed=42).select(range(1200))\n",
     "test_dataset_tokenized = tokenize_dataset(test_dataset, finetuned_tokenizer)\n",
     "\n",
     "in22_mai_test = prepare_data(\"./dataset/test/IN22_test/gen/test.eng_Latn\", \"./dataset//test/IN22_test/gen/test.mai_Deva\", \"test\")\n",
-    "in22_mai_test_tokenized = tokenize_dataset(in22_mai_test, finetuned_tokenizer)"
+    "in22_mai_test_tokenized = tokenize_dataset(in22_mai_test, finetuned_tokenizer)\n",
+    "\n",
+    "print(\"Test dataset size:\", len(test_dataset))\n",
+    "print(\"IN22 benchmark dataset size:\", len(in22_mai_test))"
    ]
   },
   {
@@ -177,9 +188,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f383319adc04c7a96a56d36fc4fbb20",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/38 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# move the model and in22 testdata to the MPS device\n",
     "finetuned_model = finetuned_model.to(device)\n",
@@ -187,29 +213,50 @@
     "\n",
     "# generate predictions for english to hindi\n",
     "eval_trainer = trainer_evaluate(finetuned_model, finetuned_tokenizer, test_dataset_tokenized)\n",
-    "mai_pred, mai_lab, _ = eval_trainer.predict(test_dataset_tokenized)\n",
+    "test_dataset_mai_pred, test_dataset_mai_lab, _ = eval_trainer.predict(test_dataset_tokenized)\n",
     "\n",
     "# decode the predictions and references\n",
-    "mai_pred = finetuned_tokenizer.batch_decode(mai_pred, skip_special_tokens=True)\n",
-    "mai_ref = finetuned_tokenizer.batch_decode(mai_lab, skip_special_tokens=True)"
+    "test_dataset_mai_pred = finetuned_tokenizer.batch_decode(test_dataset_mai_pred, skip_special_tokens=True)\n",
+    "test_dataset_mai_ref = finetuned_tokenizer.batch_decode(test_dataset_mai_lab, skip_special_tokens=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing results for test dataset\n",
+      "\n",
+      "English Text :  However, the Chola dynasty seemed to have survived elsewhere outside of India.\n",
+      "Maithili Reference:  ओना भार बाहर आन ठाम चोल वंश बचि गेल बाइत छल।\n",
+      "Maithili Prediction:  एकार प्र्रार्रारा प्र्रारार स्रार्रारा स्रारारा स्रेलेलेल स्र्रेल लेलेलेलेल लेलेलेलेल प्रेलेलेलेलेलेलेलेल प्रेलेलेल प्रेलेलेल क लेलेलेलेलेलेलेलेलेलेलेल लेलेलेलेल।\n",
+      "\n",
+      "\n",
+      "English Text :  Rockport is a city in the U.S. state of Texas.\n",
+      "Maithili Reference:  रॉकपोर्ट सन््त राज्य अमेरिका क टेक्सास राज्य क एकटा र थी\n",
+      "Maithili Prediction:  एकार स्र्र्र्र्र्रा स्र्र्र्रारा स्र्रार्रा स्र्र्राल स्रेल स्रेल स्रेल स्रेल स्रेलेल स्रेलेलेलेल स्रेल स्रेलेल।\n",
+      "\n",
+      "\n",
+      "chrF++ score for English-Maithili test data split: 5.077240987101195\n"
+     ]
+    }
+   ],
    "source": [
     "# print the predictions and references for comparison\n",
+    "print(\"Testing results for test dataset\\n\")\n",
     "for i in range(2):\n",
-    "    print(\"English Text: \", in22_mai_test[i][\"source_text\"])\n",
-    "    print(\"Maithili Reference: \", mai_ref[i])\n",
-    "    print(\"Maithili Prediction: \", mai_pred[i])\n",
+    "    print(\"English Text : \", test_dataset[i]['source_text'])\n",
+    "    print(\"Maithili Reference: \", test_dataset_mai_ref[i])\n",
+    "    print(\"Maithili Prediction: \",test_dataset_mai_pred[i])\n",
     "    print(\"\\n\")\n",
     "\n",
     "# calculate chrF++ score for hindi to maithili overlap\n",
-    "chrf_score_mai = compute_chrf(mai_pred, mai_ref)\n",
-    "print(f\"chrF++ score for English-Maithili IN22 benchmark dataset: {chrf_score_mai['score']}\")"
+    "chrf_score_mai = compute_chrf(test_dataset_mai_pred, test_dataset_mai_ref)\n",
+    "print(f\"chrF++ score for English-Maithili test data split: {chrf_score_mai['score']}\")"
    ]
   },
   {
@@ -221,24 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "033ba4ddba8340fbbf921b720ff719ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/32 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# move the model and in22 testdata to the MPS device\n",
@@ -247,16 +279,16 @@
     "\n",
     "# generate predictions for english to hindi\n",
     "eval_trainer = trainer_evaluate(finetuned_model, finetuned_tokenizer, in22_mai_test_tokenized)\n",
-    "mai_pred, mai_lab, _ = eval_trainer.predict(in22_mai_test_tokenized)\n",
+    "in22_mai_test_pred, in22_mai_test_lab, _ = eval_trainer.predict(in22_mai_test_tokenized)\n",
     "\n",
     "# decode the predictions and references\n",
-    "mai_pred = finetuned_tokenizer.batch_decode(mai_pred, skip_special_tokens=True)\n",
-    "mai_ref = finetuned_tokenizer.batch_decode(mai_lab, skip_special_tokens=True)\n"
+    "in22_mai_test_pred = finetuned_tokenizer.batch_decode(in22_mai_test_pred, skip_special_tokens=True)\n",
+    "in22_mai_test_ref = finetuned_tokenizer.batch_decode(in22_mai_test_lab, skip_special_tokens=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -264,16 +296,29 @@
      "output_type": "stream",
      "text": [
       "English Text:  An appearance is a bunch of attributes related to the service person, like their shoes, clothes, tie, jewellery, hairstyle, make-up, watch, cosmetics, perfume, etc.\n",
-      "Maithili Reference:  रूप सर्ला व्यक् सम्बन् ब रास लक् सम होयत  जेना हुनक ा, कपड़ा, टाई, गहना, , श्रृंगार, ़ी, प्रसाधन सामग्री, सेंट इत्या\n",
-      "Maithili Prediction:  एकार प्र्र्रार्र्र्रा प्र्रार्र्रा प्र्र्र्र्र्र्र्र्र्र्रा पर्र्र्र्र्र्र्रा प्र्र्र्र्रार्र्र्रान स्र्र्र्र्र्रान पार्र्रान प्र्रेल, स्र्र्र्रेलेल प्रेलेलेलेलेल स्र्र्र्र्र्रेलेलेल, स्रेलेलेलेलेलेलेलेलेलेलेलेलेलेल, स्त्त्रेल, स्त्त्रेलेलेलेल, स्त्त्र्र्र्र्थ्र्रेल, स्रेल, लेलेल, लेल, लेलेलेलेलेलेल, पे पेलेलेलेलेलेलेल, लेल, लेल, लेलेलेलेलेलेल, लेलेलेलेलेलेलेल, लेल, लेलेलेलेल, लेलेल लेल, ल ल लेलेलेलेल ल आ लेलेलेलेल।\n",
+      "Maithili Reference:  ओना भारतसँ बाहर आन ठाम चोल वंश बचि गेल बुझाइत छल।\n",
+      "Maithili Prediction:  एकार प्र्रार्रारा प्र्रारार स्रार्रारा स्रारारा स्रेलेलेल स्र्रेल लेलेलेलेल लेलेलेलेल प्रेलेलेलेलेलेलेलेल प्रेलेलेल प्रेलेलेल क लेलेलेलेलेलेलेलेलेलेलेल लेलेलेलेल।\n",
       "\n",
       "\n",
       "English Text:  Ajanta, located in the Aurangabad District of Maharashtra has twenty-nine caitya and vihara caves decorated with sculptures and paintings from the first century B.C.E. to the fifth century C.E.\n",
-      "Maithili Reference:  महाराष्ट्रके औरंगाबादमे स्थित न्तामे पल ाब्दी ा पूर्व  पाम ाब्दी धरिक मूर्तिकला आ चित्रकला  ाओल उन्नतीस टा ्य आ ार\n",
-      "Maithili Prediction:  प्र्रारा प्र्रार्र्र्र्र्रार प्र्र्रार्रा प्र्र्रार्र्र्र्रार्र्रान प्र्र्र्र्र्र्र्र्र्रारार्र्रान स्रारारार्र्रान पार्र्र्रान पार्र्र्र्र्र्र्रेल स्र्रेल स्र्र्र्र्र्राल पार्र्र्र्र्र्र्र्रानानानानान पाराल स्र्र्र्र्राल पाल स्र्र्र्र्र्राराराल स्राल स्र्र्र्राल स्र्राराराराल पार्राल पाल पाल पाराराली क क स्राल पारारालाल स्र्रेलेल क स्र्रार्र्र्रारार्र्र्र्र्र्थ स्र्रेलेल क क क क क क क क क स्र्र्र्र्र्र्राल ल ल स्र्र्र्र्र्र्राल ल ल पर्र्र्र्राल पर्र्र्र्र्र्र्र्र्र्र्र्रल पर्र्र्र्र्र्र्र्र्र्र्राल ल ल\n",
+      "Maithili Reference:  रॉकपोर्ट सन्युक्त राज्य अमेरिका क टेक्सास राज्य क एकटा शहर थीक।\n",
+      "Maithili Prediction:  एकार स्र्र्र्र्र्रा स्र्र्र्रारा स्र्रार्रा स्र्र्राल स्रेल स्रेल स्रेल स्रेल स्रेलेल स्रेलेलेलेल स्रेल स्रेलेल।\n",
       "\n",
-      "\n",
-      "chrF++ score for English-Maithili IN22 benchmark dataset: 6.5952335417362224\n"
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Mismatch in the number of predictions (1200) and references (1024)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# calculate chrF++ score for hindi to maithili overlap\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m chrf_score_mai \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_chrf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmai_pred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43min22_mai_test\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtarget_text\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchrF++ score for English-Maithili IN22 benchmark dataset: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mchrf_score_mai[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[46], line 75\u001b[0m, in \u001b[0;36mcompute_chrf\u001b[0;34m(predictions, references)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_chrf\u001b[39m(predictions, references):\n\u001b[1;32m     74\u001b[0m     chrf \u001b[38;5;241m=\u001b[39m evaluate\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchrf\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 75\u001b[0m     chrf_score \u001b[38;5;241m=\u001b[39m \u001b[43mchrf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpredictions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpredictions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreferences\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mreferences\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     76\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m chrf_score\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/work/lib/python3.9/site-packages/evaluate/module.py:455\u001b[0m, in \u001b[0;36mEvaluationModule.compute\u001b[0;34m(self, predictions, references, **kwargs)\u001b[0m\n\u001b[1;32m    452\u001b[0m compute_kwargs \u001b[38;5;241m=\u001b[39m {k: kwargs[k] \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m kwargs \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_feature_names()}\n\u001b[1;32m    454\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(v \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m inputs\u001b[38;5;241m.\u001b[39mvalues()):\n\u001b[0;32m--> 455\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_batch\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43minputs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    456\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_finalize()\n\u001b[1;32m    458\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcache_file_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/work/lib/python3.9/site-packages/evaluate/module.py:546\u001b[0m, in \u001b[0;36mEvaluationModule.add_batch\u001b[0;34m(self, predictions, references, **kwargs)\u001b[0m\n\u001b[1;32m    539\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    540\u001b[0m     error_msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    541\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredictions and/or references don\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt match the expected format.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    542\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected format: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mselected_feature_format\u001b[38;5;250m \u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    543\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput predictions: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msummarize_if_long_list(predictions)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    544\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput references: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msummarize_if_long_list(references)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    545\u001b[0m     )\n\u001b[0;32m--> 546\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(error_msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: Mismatch in the number of predictions (1200) and references (1024)"
      ]
     }
    ],
@@ -281,12 +326,12 @@
     "# print the predictions and references for comparison\n",
     "for i in range(2):\n",
     "    print(\"English Text: \", in22_mai_test[i][\"source_text\"])\n",
-    "    print(\"Maithili Reference: \", mai_ref[i])\n",
-    "    print(\"Maithili Prediction: \", mai_pred[i])\n",
+    "    print(\"Maithili Reference: \", in22_mai_test_ref[i])\n",
+    "    print(\"Maithili Prediction: \", in22_mai_test_pred[i])\n",
     "    print(\"\\n\")\n",
     "\n",
     "# calculate chrF++ score for hindi to maithili overlap\n",
-    "chrf_score_mai = compute_chrf(mai_pred, mai_ref)\n",
+    "chrf_score_mai = compute_chrf(in22_mai_test_pred, in22_mai_test_ref)\n",
     "print(f\"chrF++ score for English-Maithili IN22 benchmark dataset: {chrf_score_mai['score']}\")"
    ]
   },
