--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba1351ce0ec442d4b970a58816d9c41f",
+       "model_id": "1902f95f144b4adf9a1b2ba2eedc9c2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0acc887273a544279d7a75355546d3ee",
+       "model_id": "bb4deb4882154395aa94004f2d422a7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ca485848fea4e9aa7c151d4ba836e6e",
+       "model_id": "c450d8db30ec49dba0cee0eed0b4b297",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,28 +158,28 @@
     "val_dataset_tokenized = tokenize_dataset(val_dataset, tokenizer)\n",
     "test_dataset_tokenized = tokenize_dataset(test_dataset, tokenizer)\n",
     "\n",
-    "# saving dataset to csv (backup)\n",
-    "save_dataset(train_dataset[\"source_text\"], \"./dataset/training_split/bpcc/train.eng_Latn\")\n",
-    "save_dataset(train_dataset[\"target_text\"], \"./dataset/training_split/bpcc/train.mai_Deva\")\n",
-    "save_dataset(val_dataset[\"source_text\"], \"./dataset/training_split/bpcc/val.eng_Latn\")\n",
-    "save_dataset(val_dataset[\"target_text\"], \"./dataset/training_split/bpcc/val.mai_Deva\")\n",
+    "# # saving dataset to csv (backup)\n",
+    "# save_dataset(train_dataset[\"source_text\"], \"./dataset/training_split/bpcc/train.eng_Latn\")\n",
+    "# save_dataset(train_dataset[\"target_text\"], \"./dataset/training_split/bpcc/train.mai_Deva\")\n",
+    "# save_dataset(val_dataset[\"source_text\"], \"./dataset/training_split/bpcc/val.eng_Latn\")\n",
+    "# save_dataset(val_dataset[\"target_text\"], \"./dataset/training_split/bpcc/val.mai_Deva\")\n",
     "save_dataset(test_dataset[\"source_text\"], \"./dataset/training_split/bpcc/test.eng_Latn\")\n",
     "save_dataset(test_dataset[\"target_text\"], \"./dataset/training_split/bpcc/test.mai_Deva\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source text:  Thus, for example, burhas or quick pace suggest excitement, while a slow confused pace suggests dejection.\n",
-      "Target text:  एहि तरहे, जेना बुरहा वा त्वरित गति उत्साहक सङ्केत दैत अछि , जखनकि धीमा भ्रमित गति उदासीनताक सङ्केत दैत अछि।\n",
-      "Source tokens:  ['▁Thus', ',', '▁for', '▁example', ',', '▁bur', 'has', '▁or', '▁quick', '▁pace', '▁suggest', '▁excitement', ',', '▁while', '▁a', '▁slow', '▁confused', '▁pace', '▁suggests', '▁de', 'ject', 'ion', '.', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
-      "Target tokens:  ['▁', 'ए', '<unk>', '▁', 'त', 'र', 'हे', ',', '▁', 'जे', 'न', 'ा', '▁', 'ब', 'ु', 'र', 'ह', 'ा', '▁', 'व', 'ा', '▁', 'त', '्', 'व', 'र', 'ित', '▁', 'ग', 'ति', '▁', '<unk>', '्', 'स', 'ा', 'हक', '▁', '<unk>', '्', '<unk>', '▁', '<unk>', '▁', '<unk>', '▁', ',', '▁', '<unk>', 'न', 'कि', '▁', 'ध', 'ी', 'म', 'ा', '▁', 'भ', '्', 'र', 'म', 'ित', '▁', 'ग', 'ति', '▁', 'उद', 'ा', 'स', 'ी', 'न', 'त', 'ा', 'क', '▁', '<unk>', '्', '<unk>', '▁', '<unk>', '▁', '<unk>', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
+      "Source text:  The Division has been held by two generations of the Jenkins family.\n",
+      "Target text:  ई प्रभाग जेनकिन्स परिवारक दू पीढ़ी द्वारा चलाओल गेल अछि।\n",
+      "Source tokens:  ['▁The', '▁Division', '▁has', '▁been', '▁held', '▁by', '▁two', '▁generations', '▁of', '▁the', '▁J', 'en', 'kin', 's', '▁family', '.', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
+      "Target tokens:  ['▁', 'ई', '▁', 'प', '्', 'र', 'भ', 'ा', 'ग', '▁', 'जे', 'न', 'कि', 'न', '्', 'स', '▁', 'प', 'र', 'िव', 'ा', 'र', 'क', '▁', 'दू', '▁', 'प', 'ी', 'ढ', '़', 'ी', '▁', 'द', '्', 'व', 'ा', 'र', 'ा', '▁', 'च', 'ल', 'ा', 'ओ', 'ल', '▁', 'ग', 'े', 'ल', '▁', '<unk>', '</s>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de45a96135e04a18ba8b7e9e0ccfcc34",
+       "model_id": "bc61a3a89649401a8dcfd998658f015b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a776810bb2264b86ad948c760219634d",
+       "model_id": "c38cd5d0212f41f5a254d4b676e5379d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,19 +316,19 @@
     "\n",
     "def compute_chrf(predictions, references):\n",
     "    chrf = evaluate.load(\"chrf\")\n",
-    "    chrf_score = chrf.compute(predictions=predictions, references=references)\n",
+    "    chrf_score = chrf.compute(predictions=predictions, references=references, word_order=2)\n",
     "    return chrf_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91bb8d63e55f4aa189db97cad70933cb",
+       "model_id": "58c62ca7b2cd42ecbe1a211993e96bf2",
        "version_major": 2,
        "version_minor": 0
       },
