--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc61a3a89649401a8dcfd998658f015b",
+       "model_id": "fed96e88349d46a8986ebd06f409265a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c38cd5d0212f41f5a254d4b676e5379d",
+       "model_id": "0b05c9fbf58f4bcd9fd99f74e7eeb851",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -373,8 +373,8 @@
       "Hindi Prediction:  महाराष्ट्र के औरंगाबाद जिले में स्थित ंता में उन्तीस ्य और ार गुफाएँ हैं जो पहली ाब्दी ई.पू. से ले कर पाीं ाब्दी ्वी तक की मूर\n",
       "\n",
       "\n",
-      "chrF++ score for English-Hindi translation: 28.888480881961343\n",
-      "chrF++ score for Hindi-Maithili overlap: 25.91324614465444\n"
+      "chrF++ score for English-Hindi translation: 27.315089809805986\n",
+      "chrF++ score for Hindi-Maithili overlap: 21.939127134885133\n"
      ]
     }
    ],
@@ -405,10 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# funtion to configure LoRA\n",
     "def configure_lora(rank, lora_alpha, lora_dropout, task_type, bias, target_modules):\n",
     "\n",
     "    lora_config = LoraConfig(\n",
@@ -422,6 +423,7 @@
     "\n",
     "    return lora_config\n",
     "\n",
+    "# function to define training arguments\n",
     "def train_args(output_dir, eval_stra, learning_r, batch_size, grad_step, num_train_epochs, \n",
     "            save_steps, logging_dir, logging_steps, save_total_limit):\n",
     "\n",
@@ -440,6 +442,7 @@
     "\n",
     "    return training_args\n",
     "\n",
+    "# function to define the training trainer\n",
     "def trainer_train(model, training_args, train_dataset, val_dataset, tokenizer):\n",
     "\n",
     "    trainer = Seq2SeqTrainer(\n",
@@ -450,7 +453,19 @@
     "        tokenizer=tokenizer  # tokenizer for tokenization\n",
     "    )\n",
     "\n",
-    "    return trainer"
+    "    return trainer\n",
+    "\n",
+    "# function to print the trainable parameters\n",
+    "def get_trainable_parameters(model):\n",
+    "    trainable_params = 0\n",
+    "    all_param = 0\n",
+    "    for _, param in model.named_parameters():\n",
+    "        all_param += param.numel()\n",
+    "        if param.requires_grad:\n",
+    "            trainable_params += param.numel()\n",
+    "    print(\n",
+    "        f\"After adding LoRA: Trainable Params: {trainable_params}, All Params: {all_param},  Trainable %: {100 * trainable_params / all_param:.2f}\"\n",
+    "    )"
    ]
   },
   {
@@ -462,21 +477,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before adding LoRA, Parameter Size: 76676096\n",
-      "After adding LoRA, Parameter Size: 76676096\n"
+      "Before adding LoRA, All Params: 76381184\n",
+      "After adding LoRA: Trainable Params: 912384, All Params: 77265920,  Trainable %: 1.18\n",
+      "Finetuning the model using LoRA...\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfa1a8995eb848c39706c7cb4e11dee5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3806 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# configure LoRA\n",
-    "print(f\"Before adding LoRA, Parameter Size: {model.num_parameters()}\")\n",
+    "print(f\"Before adding LoRA, All Params: {model.num_parameters()}\")\n",
     "\n",
-    "lora_config = configure_lora(8, 16, 0.01, \"SEQ_2_SEQ_LM\", \"none\", [\"q_proj\", \"v_proj\"])\n",
+    "lora_config = configure_lora(16, 32, 0.1, \"SEQ_2_SEQ_LM\", \"lora_only\", [\"q_proj\", \"k_proj\", \"v_proj\"])\n",
     "model = get_peft_model(model, lora_config)\n",
-    "print(f\"After adding LoRA, Parameter Size: {model.num_parameters()}\")\n",
+    "get_trainable_parameters(model)\n",
     "\n",
     "# define training arguments and trainer\n",
-    "training_args = train_args(\"./results/train\", \"epoch\", 5e-5, 16, 2, 1, 1000, \"./logs\", 500, 2)\n",
+    "training_args = train_args(\"./results/train/epoch2\", \"epoch\", 5e-5, 16, 2, 2, 1000, \"./logs\", 500, 2)\n",
     "train_dataset_tokenized = train_dataset_tokenized.with_transform(move_to_device)\n",
     "val_dataset_tokenized = val_dataset_tokenized.with_transform(move_to_device)\n",
     "train_trainer = trainer_train(model, training_args, train_dataset_tokenized, val_dataset_tokenized, tokenizer)\n",
@@ -487,8 +517,8 @@
     "train_trainer.train()\n",
     "\n",
     "# save the model\n",
-    "model.save_pretrained(\"./finetuned/epoch1\")\n",
-    "tokenizer.save_pretrained(\"./finetuned/epoch1\")"
+    "model.save_pretrained(\"./finetuned/epoch2\")\n",
+    "tokenizer.save_pretrained(\"./finetuned/epoch2\")"
    ]
   },
   {
