--- a/training.ipynb
+++ b/training.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -495,6 +495,103 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 3.2021, 'grad_norm': 0.3349359631538391, 'learning_rate': 4.343142406726222e-05, 'epoch': 0.26}\n",
+      "{'loss': 2.3476, 'grad_norm': 0.4420273005962372, 'learning_rate': 3.686284813452444e-05, 'epoch': 0.53}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/work/lib/python3.9/site-packages/peft/utils/other.py:689: UserWarning: Unable to fetch remote file due to the following error (ReadTimeoutError(\"HTTPSConnectionPool(host='huggingface.co', port=443): Read timed out. (read timeout=10)\"), '(Request ID: cd720404-f49e-42e5-b2b6-ea42cfae19ab)') - silently ignoring the lookup for the file config.json in Helsinki-NLP/opus-mt-en-hi.\n",
+      "  warnings.warn(\n",
+      "/opt/miniconda3/envs/work/lib/python3.9/site-packages/peft/utils/save_and_load.py:243: UserWarning: Could not find a config file in Helsinki-NLP/opus-mt-en-hi - will assume that the vocabulary was not modified.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 2.2809, 'grad_norm': 0.6663594841957092, 'learning_rate': 3.0294272201786656e-05, 'epoch': 0.79}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09a83bbcce4748d9929d702467902d24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/423 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 2.198612928390503, 'eval_runtime': 70.1139, 'eval_samples_per_second': 48.25, 'eval_steps_per_second': 6.033, 'epoch': 1.0}\n",
+      "{'loss': 2.2413, 'grad_norm': 0.5167800188064575, 'learning_rate': 2.3725696269048873e-05, 'epoch': 1.05}\n",
+      "{'loss': 2.2147, 'grad_norm': 0.7370030283927917, 'learning_rate': 1.7157120336311088e-05, 'epoch': 1.31}\n",
+      "{'loss': 2.2063, 'grad_norm': 0.5104997754096985, 'learning_rate': 1.0588544403573306e-05, 'epoch': 1.58}\n",
+      "{'loss': 2.1934, 'grad_norm': 0.5723661184310913, 'learning_rate': 4.019968470835523e-06, 'epoch': 1.84}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/work/lib/python3.9/site-packages/peft/utils/other.py:689: UserWarning: Unable to fetch remote file due to the following error (ProtocolError('Connection aborted.', ConnectionResetError(54, 'Connection reset by peer')), '(Request ID: c5680a8b-54fb-4919-87f0-e95d28f98c59)') - silently ignoring the lookup for the file config.json in Helsinki-NLP/opus-mt-en-hi.\n",
+      "  warnings.warn(\n",
+      "/opt/miniconda3/envs/work/lib/python3.9/site-packages/peft/utils/save_and_load.py:243: UserWarning: Could not find a config file in Helsinki-NLP/opus-mt-en-hi - will assume that the vocabulary was not modified.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8dc9f6bfdfb04d83be39e83ece384b5c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/423 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'eval_loss': 2.1613428592681885, 'eval_runtime': 70.0914, 'eval_samples_per_second': 48.266, 'eval_steps_per_second': 6.035, 'epoch': 2.0}\n",
+      "{'train_runtime': 7020.9441, 'train_samples_per_second': 17.346, 'train_steps_per_second': 0.542, 'train_loss': 2.36861842642066, 'epoch': 2.0}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('./finetuned/epoch2/tokenizer_config.json',\n",
+       " './finetuned/epoch2/special_tokens_map.json',\n",
+       " './finetuned/epoch2/vocab.json',\n",
+       " './finetuned/epoch2/source.spm',\n",
+       " './finetuned/epoch2/target.spm',\n",
+       " './finetuned/epoch2/added_tokens.json')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -520,20 +617,6 @@
     "model.save_pretrained(\"./finetuned/epoch2\")\n",
     "tokenizer.save_pretrained(\"./finetuned/epoch2\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
